<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9EAFB"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/header_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@android:color/holo_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_strength"
        android:layout_width="165dp"
        android:layout_height="163dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="220dp"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/strength" />

    <ImageButton
        android:id="@+id/btn_yoga"
        android:layout_width="167dp"
        android:layout_height="152dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn_strength"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/yoga3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:text="@string/strength_text"
        app:layout_constraintBottom_toTopOf="@+id/btn_strength"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:text="@string/yoga_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="84dp"
        android:layout_height="44dp"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="4dp"
        android:background="#CAC7F6"
        android:text="@string/strength_toggle"
        android:textColor="#673AB7"
        android:textOff="Select"
        android:textOn="Select"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_strength" />

    <ToggleButton
        android:id="@+id/toggleButton2"
        android:layout_width="84dp"
        android:layout_height="44dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:background="#DC8F8F"
        android:text="@string/yoga_toggle"
        android:textColor="#FFFFFF"
        android:textOff="Select"
        android:textOn="Select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_yoga" />

    <Button
        android:id="@+id/go_button"
        android:layout_width="109dp"
        android:layout_height="66dp"
        android:layout_marginBottom="120dp"
        android:text="Go!"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>